--- a/css/all.css
+++ b/css/all.css
@@ -125,12 +125,12 @@ footer img {
     border-radius: 0.3em;
     background-color: #F97B22;
     border: 1px solid #F97B22;
-    color: #ECE3CE;
+    color: #FFFDF8;
     font-size: 16px;
 }
 .btn:hover{
     transition: 0.5s;
-    background-color: #ECE3CE;
+    background-color: #FFFDF8;
     border: 1px solid #F97B22;
     color: #F97B22;
     cursor: pointer;
