--- a/css/registro.css
+++ b/css/registro.css
@@ -27,15 +27,12 @@ article{
     flex-direction: column;
     justify-content: center;
     padding-left: 30vh;
+    width: 85vh;
 }
-input[type=text], input[type=date], input[type=number]{
-    margin-right: 1vh;
-    background-color: transparent;
-    font-size: 0.8em;
-    border: none;
-    border-bottom: 1px solid #F97B22;
-    outline: none;
-    color: black;
-    padding-bottom: 0.3em;
-    margin: 0 1em 1em 0;
+h1{
+    margin-bottom: 1em;
+    text-transform: uppercase;
+}
+.btn{
+    margin-top: 1.5em;
 }
