--- a/css/all.css
+++ b/css/all.css
@@ -23,7 +23,7 @@ header * {
     padding: 0 1em;
 }
 
-header {
+.header-uno {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,13 +34,31 @@ header {
 }
 
 
-header div {
+.header-uno div {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-
+.header-dos {
+    background-color: #618865;
+    height: 50px;
+}
+.header-dos ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding-top: 12px;
+}
+header a {
+    color: #FFFDF8;
+    text-decoration: none;
+}
+header a:hover {
+    color: #e9e9e9;
+    transition: 0.5s;
+    text-decoration: underline;
+}
 #encabezado div {
 
     display: flex;
@@ -127,6 +145,7 @@ footer img {
     border: 1px solid #F97B22;
     color: #FFFDF8;
     font-size: 16px;
+    text-decoration: none;
 }
 .btn:hover{
     transition: 0.5s;
@@ -135,7 +154,7 @@ footer img {
     color: #F97B22;
     cursor: pointer;
 }
-input[type=text], input[type=date], input[type=number], input[type=email], input[type=password]{
+input[type=text], input[type=date], input[type=number], select, input[type=email], input[type=password]{
     margin-right: 1vh;
     background-color: transparent;
     font-size: 0.8em;
@@ -151,8 +170,4 @@ input[type=text], input[type=number]{
 }
 h6 {
     font-size: 20px;
-}
-a {
-    color: #FFFDF8;
-    text-decoration: none;
 }
