--- a/css/all.css
+++ b/css/all.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 6.69em;
 
-    padding: 0 2.69em;
+    padding: 0 2.69em;*/
 
     background-color: #4F6F52;
     color: #FFFDF8;
