--- a/css/registro.css
+++ b/css/registro.css
@@ -36,3 +36,27 @@ h1{
 .btn{
     margin-top: 1.5em;
 }
+
+@media screen and (max-width: 37.5em){
+    .cont-img{
+        display: none;
+    }
+    .art-form{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0 0.313em;
+    }
+    .art-form h1{
+        margin: 2.5em;
+    }
+    .cont-btn{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 4em;
+    }
+    input[type=text], input[type=date], input[type=email], input[type=number]{
+        height: 3.125em;
+    }
+}
