--- a/css/dieta.css
+++ b/css/dieta.css
@@ -19,6 +19,10 @@ article{
     width: 100%;
 }
 
+.resumen p span:nth-child(2) {
+    text-align: right;
+}
+
 .alimentos-sugeridos div {
     margin: 1.5em 0;
 }
@@ -34,4 +38,16 @@ article{
 .alimentos-sugeridos div img {
     width: 1.25em;
     height: 1.25em;
+}
+
+@media screen and (max-width: 600px) {
+    .alimentos-sugeridos p {
+        margin: 1em;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .btn {
+        font-size: 78%;
+    }
 }
