--- a/css/dieta.css
+++ b/css/dieta.css
@@ -38,6 +38,8 @@ article{
 .alimentos-sugeridos div img {
     width: 1.25em;
     height: 1.25em;
+
+    cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
